--- a/App/templates/dashboard/git/data.html
+++ b/App/templates/dashboard/git/data.html
@@ -1,52 +1,26 @@
 {% extends "dashboard/git/home.html" %}
 {% block dashboard_git_home %}
 <div class="container-fluid">
-<ul class="nav nav-tabs card-header-tabs ">
-	<li class="nav-item dropdown">
-		<a class="nav-link  dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"   href="#">Branches</a>
-		<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-			<a class="dropdown-item" href="/dashboard/papers/publications">master</a>
-			<div class="dropdown-divider"></div>
-			<a class="dropdown-item" href="/dashboard/papers/manuals">dev</a>
-		</div>
-	</li>
-  <li class="nav-item">
-    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Clone</a>
-  </li>
-</ul>
-</div>
-<div class="container-fluid">
+	<div align=left>
 
-<div class="container" align=left>
-	<div class="row">
-		<div class="col">
-			<a class="nav-link active text-dark " href="#">
-			<i class="fa fa-folder-open-o" style="font-size:30px;color:red"></i>
-			<small><b>2019-CCB data</b></small>
-			</a>
-			<hr>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-			<a class="nav-link active text-dark " href="#">
-			<i class="fa fa-folder-open-o" style="font-size:30px;color:red"></i>
-			<small><b>Programs</b></small>
-			</a>
-			<hr>
-		</div>
-	</div>
-	<div class="row">
-		<div class="col">
-			<a class="nav-link active text-dark " href="#">
-			<i class="fa fa-folder-open-o" style="font-size:30px;color:red"></i>
-			<small><b>Repository</b></small>
-			</a>
-			<hr>
-		</div>
-	</div>
-
+		<div class="row">
+  <div class="col-3">
+    <div class="nav flex-column nav-pills" id="v-pills-tab" role="tablist" aria-orientation="vertical">
+      <a class="nav-link active" id="v-pills-home-tab" data-toggle="pill" href="#v-pills-home" role="tab" aria-controls="v-pills-home" aria-selected="true">Home</a>
+      <a class="nav-link" id="v-pills-profile-tab" data-toggle="pill" href="#v-pills-profile" role="tab" aria-controls="v-pills-profile" aria-selected="false">Profile</a>
+      <a class="nav-link" id="v-pills-messages-tab" data-toggle="pill" href="#v-pills-messages" role="tab" aria-controls="v-pills-messages" aria-selected="false">Messages</a>
+      <a class="nav-link" id="v-pills-settings-tab" data-toggle="pill" href="#v-pills-settings" role="tab" aria-controls="v-pills-settings" aria-selected="false">Settings</a>
+    </div>
+  </div>
+  <div class="col-9">
+    <div class="tab-content" id="v-pills-tabContent">
+      <div class="tab-pane fade show active" id="v-pills-home" role="tabpanel" aria-labelledby="v-pills-home-tab">.1..</div>
+      <div class="tab-pane fade" id="v-pills-profile" role="tabpanel" aria-labelledby="v-pills-profile-tab">.2..</div>
+    </div>
+  </div>
 </div>
+
+	</div>
 </div>
 
 {% endblock %}
