--- a/App/templates/index.html
+++ b/App/templates/index.html
@@ -4,24 +4,26 @@
 	<meta charset="utf-8">
 	<meta name="author" content="{{ lang["author"] }}">
 	<meta name="description" content="BINA experiment page">
-	<meta name="keywords" content="BINA, BINA detector, 3nf, space star, CCB, bronowice, nuclear forces, UŚ, UJ, IFJ PAN, experiments, 3-nucleon forces, breakup, elastic scattering">
-
+	<meta name="keywords" content="{{ lang["tags"] }}">
 	<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+	<link rel="stylesheet" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/font-awesome.min.css">
 
-	<script type="text/javascript" src="http://latex.codecogs.com/latexit.js"></script>
+	<script type="text/javascript" src="/js/latexit.js"></script>
 	<script type="text/javascript">
 	LatexIT.add('p',true);
 	</script>
 
-    <link rel='stylesheet' type='text/css' href='/css/x3dom.css'>
-    <script type='text/javascript' src='/js/x3dom.js'></script>
+  <link rel='stylesheet' type='text/css' href='/css/x3dom.css'>
+  <script type='text/javascript' src='/js/x3dom.js'></script>
 
-	<title>BINA</title>
+	<title>fenu-exp</title>
+	<link rel="shortcut icon" type="image/png" href="/img/favicon.png"/>
+
 </head>
-<body style="font-size:1.5rem;">
+<body>
+
 	<header>
 		<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
 			<a class="navbar-brand" href="#">Few Nucleon Experiments</a>
@@ -125,6 +127,8 @@
 		</div>
 	</div>
 
+	<!-- ========================= FOOTER ========================== -->
+
 	<nav class="navbar sticky-bottom navbar-light bg-white">
 	<ul class="nav navbar-nav  navbar-left">
 		<li class="nav-item">
@@ -142,9 +146,9 @@
 		</li>
 	</nav>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/showdown/<version tag>/showdown.min.js"></script>
-	<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-	<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-  </body>
+	<script src="/js/jquery-3.3.1.slim.min.js"></script>
+	<script src="/js/popper.min.js"></script>
+	<script src="/js/bootstrap.min.js"></script>
+
+</body>
 </html>
