--- a/App/templates/dashboard/files/papers.html
+++ b/App/templates/dashboard/files/papers.html
@@ -1,7 +1,7 @@
 {% extends "dashboard/files.html" %}
 {% block dashboard_files %}
 <div class="container-fluid">
-	<div class="container">
+	<div>
 		<div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
 			<div class="btn-group" role="group" aria-label="First group">
 				<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#modnew">Send file</button>
@@ -37,7 +37,24 @@
 				<td>{{pub.year|int}}</td>
 				<td>
 					<a  type="button" href="/dashboard/edit/paper/{{pub.id}}" class="btn btn-outline-primary btn-sm"><i class="fa fa-edit" style="font-size:15px;color:blue"></i></a>
-					<a  type="button" href="/dashboard/delete/paper/{{pub.id}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash" style="font-size:15px;color:red"></i></a>
+					<button type="button" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#delete{{ pub.id }}"><i class="fa fa-trash" style="font-size:15px;color:red"></i></button>
+
+					<div class="modal fade" id="delete{{ pub.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+						<div class="modal-dialog modal-dialog-centered" role="document">
+							<div class="modal-content">
+								<div class="modal-header">
+									<h5 class="modal-title" id="exampleModalCenterTitle">Are you sure?</h5>
+										<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+											<span aria-hidden="true">&times;</span>
+										</button>
+								</div>
+								<div class="modal-body">
+									<a  type="button" href="/dashboard/delete/paper/{{pub.id}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash" style="font-size:15px;color:red"></i>Delete</a>
+								</div>
+							</div>
+						</div>
+					</div>
+
 				</td>
 			</tr>
 			{% endfor %}
