--- a/App/templates/dashboard/files/presentations.html
+++ b/App/templates/dashboard/files/presentations.html
@@ -1,7 +1,7 @@
 {% extends "dashboard/files.html" %}
 {% block dashboard_files %}
 <div class="container-fluid">
-	<div class="container">
+	<div>
 		<div class="btn-toolbar justify-content-between" role="toolbar" aria-label="Toolbar with button groups">
 			<div class="btn-group" role="group" aria-label="First group">
 				<button type="button" class="btn btn-outline-success" data-toggle="modal" data-target="#modnew">Send file</button>
@@ -25,7 +25,7 @@
 					</div>
 				</form>
 			</div>
-		</div><br>
+		</div><hr>
 
 		<div class="accordion" id="accordionExample">
 			{% for tag in tags %}
@@ -39,20 +39,38 @@
 				</div>
 				<div id="collapse{{tag.id}}" class="collapse" aria-labelledby="heading{{tag.id}}" data-parent="#accordionExample">
 					<div class="card-body">
-						<div class="container" align=left>
+						<div align=left>
 							{% for content in tag.content %}
 							<div class="row">
 								<div class="col">
 									<a class="nav-link active text-dark " href="/dashboard/presentations/download/{{content.id}}">
-										<i class="fa fa-file-pdf-o" style="font-size:30px;color:red"></i>
+										<i class="fa fa-file-pdf" style="font-size:30px;color:red"></i>
 										<b><small>{{ content.author }}: </small>{{ content.title }}</b>
 										<p><small>{{ content.desc }}</small></p>
 									</a>
 									<hr>
 								</div>
 								<div class="col" align="right">
-										<a  type="button" href="/dashboard/edit/presentation/{{content.id}}" class="btn btn-outline-primary btn-sm"><i class="fa fa-edit" style="font-size:15px;color:blue"></i></a>
-										<a  type="button" href="/dashboard/delete/presentation/{{content.id}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash" style="font-size:15px;color:red"></i></a>
+										<a  type="button" href="/dashboard/edit/presentation/{{content.id}}" class="btn btn-outline-primary btn-sm"><i class="fa fa-edit" style="font-size:15px;color:#008cba"></i></a>
+										<button type="button" class="btn btn-outline-danger btn-sm" data-toggle="modal" data-target="#delete{{ content.id }}"><i class="fa fa-trash" style="font-size:15px;color:red"></i></button>
+
+										<div class="modal fade" id="delete{{ content.id }}" tabindex="-1" role="dialog" aria-hidden="true">
+											<div class="modal-dialog modal-dialog-centered" role="document">
+												<div class="modal-content">
+													<div class="modal-header">
+														<h5 class="modal-title" id="exampleModalCenterTitle">Are you sure?</h5>
+															<button type="button" class="close" data-dismiss="modal" aria-label="Close">
+																<span aria-hidden="true">&times;</span>
+															</button>
+													</div>
+													<div class="modal-body">
+														<a  type="button" href="/dashboard/delete/paper/{{content.id}}" class="btn btn-outline-danger btn-sm"><i class="fa fa-trash" style="font-size:15px;color:red"></i>Delete</a>
+													</div>
+												</div>
+											</div>
+										</div>
+
+
 								</div>
 							</div>
 							{% endfor %}
