--- a/App/templates/dashboard/git/home.html
+++ b/App/templates/dashboard/git/home.html
@@ -1,20 +1,39 @@
 {% extends "dashboard.html" %}
 {% block dashboard %}
 
-<div class="card text-center">
-	<div class="card-header">
-		<ul class="nav nav-tabs card-header-tabs">
-			<li class="nav-item dropdown">
-				<a class="nav-link  dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"   href="#">Software</a>
-				<div class="dropdown-menu" aria-labelledby="navbarDropdown">
-					<a class="dropdown-item" href="/dashboard/papers/publications">FBun</a>
-					<div class="dropdown-divider"></div>
-					<a class="dropdown-item" href="/dashboard/papers/manuals">BINA_SIM</a>
+	<div class="row">
+		<div class="col-sm-2">
+			<div class="jumbotron">
+				d
+			</div>
+		</div>
+		<div class="col-sm-10">
+			<div class="card text-center">
+				<div class="card-header">
+					<ul class="nav nav-tabs card-header-tabs">
 
+					  <li class="nav-item">
+					    <a class="nav-link" id="contact-tab" data-toggle="tab" href="#contact" role="tab" aria-controls="contact" aria-selected="false">Clone</a>
+					  </li>
+
+						<li class="nav-item dropdown">
+							<a class="nav-link  dropdown-toggle" id="navbarDropdown" data-toggle="dropdown"   href="#">Software</a>
+							<div class="dropdown-menu" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item" href="/dashboard/papers/publications">FBun</a>
+								<div class="dropdown-divider"></div>
+								<a class="dropdown-item" href="/dashboard/papers/manuals">BINA_SIM</a>
+							</div>
+						</li>
+
+					</ul>
 				</div>
-			</li>
-		</ul>
-	</div>
-		{% block dashboard_git_home %}{% endblock %}
-</div>
+
+				<div class="card-body">
+					{% block dashboard_git_home %}{% endblock %}
+				</div>
+
+			</div>
+			</div>
+		</div>
+
 {% endblock %}
